--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <scope>runtime</scope>
         </dependency>-->
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.18.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
